--- a/src/components/Fretboard.css
+++ b/src/components/Fretboard.css
@@ -1,6 +1,7 @@
 .fretboard-container {
   align-items: center;
   overflow: hidden;
+  padding: 15px 0px 0px 0px;
   /* color: #ccc; */
 }
 
@@ -89,5 +90,9 @@
   border: 3px solid #794bc4;
   box-sizing: border-box;
   z-index: 1;
-  box-shadow: rgba(121, 75, 196, 0.56) 0px 0px 60px 20px;
+  box-shadow: rgba(121, 75, 196, 0.56) 0px 0px 10px 10px;
+}
+
+.reset-button {
+  font-size: 0.5em !important;
 }
