--- a/src/components/ExplainButton.css
+++ b/src/components/ExplainButton.css
@@ -18,4 +18,16 @@
   color: #282c34;
   background-color: #f3f5f7;
   z-index: 9999;
+  text-align: center;
+}
+
+.explain-modal-content .question {
+  font-weight: 900;
+  font-size: 0.7em;
+}
+
+.explain-modal-content .answer {
+  font-weight: 300;
+  font-size: 0.6em;
+  margin: 5px 0px 10px 10px;
 }
