--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+#debug {
+  position: fixed;
+  top: 0px;
+  right: 0px;
+  border: 1px solid red;
+  padding: 10px;
+  font-size: 0.4em !important;
+  background-color: #282c34;
+}
+
 .App {
   display: flex;
   flex-direction: column;
