--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+:root {
+  --text-color: #f3f5f7;
+  --background-color: #282c34;
+  --focus-color: #794bc4;
+}
+
+body.light-mode {
+  --text-color: #000;
+  --background-color: #fff;
+  --focus-color: #000;
+}
+
 :focus {
   outline: 3px solid #794bc4 !important;
   border-radius: 4px;
@@ -17,19 +29,19 @@
   display: flex;
   flex-direction: column;
   text-align: left;
-  color: #f3f5f7;
+  color: var(--text-color);
   min-height: 100vh;
   align-items: left;
   justify-content: flex-start;
   font-size: calc(10px + 2vmin);
-  background-color: #282c34;
+  background-color: var(--background-color);
 }
 
 .App-inputs {
   display: flex;
   flex-wrap: wrap;
   font-size: 0.5em;
-  color: #f3f5f7;
+  color: var(--text-color);
   max-height: 1000px;
   overflow: hidden;
   transition: opacity 1s, transform 1s, max-height 1s ease-in-out;
