--- a/src/components/NotesUsed.css
+++ b/src/components/NotesUsed.css
@@ -4,39 +4,25 @@
   font-size: 1em;
   text-align: center;
   justify-content: center;
-  padding: 0px 0px 0px 0px;
 }
 
 .notes-used .note {
-  border: 1px solid #794bc4;
+  border: 1px solid var(--main-accent);
   padding: 5px;
-  width: 50px;
   cursor: pointer;
 }
 
 .notes-used .active {
   font-weight: bold;
-  box-shadow: rgba(121, 75, 196, 0.56) 0px 0px 20px 10px;
+  box-shadow: var(--main-accent-box-shadow) 0px 0px 20px 10px;
   text-decoration: underline;
 }
 
-.notes-used > div > div {
-  border: 1px solid #794bc4;
-  padding: 10px;
-  margin-top: 5px;
-  width: auto;
-  display: flex;
-  flex-wrap: wrap;
+.notes-used .editing {
+  box-shadow: var(--main-accent-box-shadow) 0px 0px 20px 10px;
+  color: var(--main-accent);
 }
 
-.notes-used > div > div > div {
-  margin: 5px;
-  padding: 5px;
-  border: 1px solid #ccc;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.notes-used > div > div > div:hover {
-  box-shadow: rgba(121, 75, 196, 0.56) 0px 0px 20px 10px;
+.notes-used .note:hover {
+  box-shadow: var(--main-accent-box-shadow) 0px 0px 20px 10px;
 }
