--- a/src/Buttons.css
+++ b/src/Buttons.css
@@ -7,6 +7,7 @@ button.rainbow-button {
   display: flex;
   align-items: center;
   transition: all 0.5s ease;
+  color: var(--text-color);
 }
 
 button.rainbow-button:hover {
@@ -16,13 +17,17 @@ button.rainbow-button:hover {
   animation-duration: 2s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
-  box-shadow: rgba(121, 75, 196, 0.4) 0px 5px;
+  box-shadow: var(--main-accent-box-shadow) 0px 5px;
 }
 
 @keyframes rainbow-buttons {
   50% {
-    color: rgb(121, 75, 196);
+    color: var(--main-accent);
   }
+}
+
+.hide-inputs-button {
+  font-size: 0.4em !important;
 }
 
 .icon-button {
