--- a/src/App.css
+++ b/src/App.css
@@ -148,3 +148,14 @@ h1 {
   justify-content: center;
   align-items: baseline;
 }
+
+.debug {
+  border: 1px solid red;
+}
+
+.debug-info-block {
+  border: 1px solid red;
+  color: white;
+  background-color: black;
+  font-size: 2em;
+}
