--- a/src/App.css
+++ b/src/App.css
@@ -155,7 +155,11 @@ h1 {
 
 .debug-info-block {
   border: 1px solid red;
+  position: fixed;
+  top: 10px;
+  right: 20px;
   color: white;
   background-color: black;
-  font-size: 2em;
+  padding: 20px;
+  font-size: 0.5em;
 }
