--- a/src/App.css
+++ b/src/App.css
@@ -156,11 +156,10 @@ h1 {
 .debug-info-block {
   border: 1px solid red;
   position: fixed;
-  top: 10px;
+  bottom: 10px;
   right: 20px;
   color: white;
   background-color: black;
   padding: 20px;
   font-size: 0.5em;
-  display: none;
 }
