--- a/src/App.css
+++ b/src/App.css
@@ -159,6 +159,7 @@ h1 {
   bottom: 10px;
   right: 20px;
   color: white;
+  display: none;
   background-color: black;
   padding: 20px;
   font-size: 0.5em;
