--- a/src/WhatScale.css
+++ b/src/WhatScale.css
@@ -12,7 +12,15 @@
   color: var(--main-accent) !important;
   padding: 10px;
   font-size: 20px;
-  width: 400px;
+  min-width: 400px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.what-scale-explain {
+  padding: 10px 30px;
   margin-bottom: 20px;
   text-align: center;
 }
@@ -20,7 +28,10 @@
 .results {
   text-align: left;
   background-color: var(--background-color);
+  padding: 10px;
   overflow-y: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .containing {
