--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@
   }
 
   .controls {
-    @apply row-span-1 col-span-1 flex flex-col space-y-4 justify-start items-start p-4 bg-slate-600 rounded-lg shadow-lg text-white;
+    @apply row-span-1 col-span-1 flex flex-col space-y-4 justify-start items-start p-4 bg-slate-600 border-solid border-4 border-red-600 rounded-lg shadow-lg text-white;
   }
 
   .header {
@@ -51,10 +51,6 @@
 
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 183, 255, 0.6);
-  }
-
-  .input-group {
-    @apply flex flex-col space-y-2;
   }
 
   .input-label {
