--- a/src/index.css
+++ b/src/index.css
@@ -34,8 +34,8 @@
 @layer components {
   .main-container {
     @apply w-full h-full grid grid-rows-3 grid-cols-2 gap-4 p-4;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr;
   }
 
   .controls {
