feat: prettier added

--- a/src/index.css
+++ b/src/index.css
@@ -19,10 +19,7 @@
 
   main {
     @apply px-4 min-h-screen sm:px-0 space-y-16 w-full bg-stone-900;
-    background-image: radial-gradient(
-        hsla(0, 0%, 100%, 0.25) 1px,
-        transparent 0
-      ),
+    background-image: radial-gradient(hsla(0, 0%, 100%, 0.25) 1px, transparent 0),
       radial-gradient(hsla(0, 0%, 100%, 0.1) 1px, transparent 0);
     background-size: 50px 50px;
     background-position: 0 0, 25px 25px;
