--- a/src/smoll-components/NotePlayer.css
+++ b/src/smoll-components/NotePlayer.css
@@ -5,7 +5,7 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     padding: 10px;
     margin-bottom: 10px;
-    max-width: 300px;
+    width: 600px;
     color: white;
   }
 
@@ -64,5 +64,13 @@
 
   .info-panel p {
     margin: 5px 0;
+  }
+
+  .input-grid {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-content: space-around;
   }
 }
