--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,12 @@
-:root {
+/* :root {
 	--text-color: #f3f5f7;
 	--text-color-muted: #a3a3a3;
 	--background-color: #282c34;
 	--main-accent: #794bc4;
 	--main-accent-box-shadow: rgba(121, 75, 196, 0.56);
 	--main-accent-secondary: #794bc421;
-}
+} */
 
-body.light-mode {
-	--text-color: #000;
-	--text-color-muted: #a3a3a3;
-	--background-color: #8f8f8fbb;
-	--main-accent: #000;
-	--main-accent-box-shadow: rgba(121, 75, 196, 0.56);
-	--main-accent-secondary: #794bc421;
-}
 
 :focus {
 	outline: 3px solid var(--main-accent) !important;
@@ -28,62 +20,6 @@ body.light-mode {
 	}
 }
 
-.App {	
-	/* min-height: 100vh; */
-
-}
-
-.App-inputs {
-	display: flex;
-	flex-wrap: wrap;		
-	max-height: 1000px;
-	overflow: hidden;	
-}
-
-.App-inputs .title {
-	flex: 1 0 10%;
-	font-size: 1em;
-}
-
-.App-inputs .tiny-info {
-	display: grid;
-	font-size: 1em;
-}
-
-.App-inputs .selects {
-	flex: 1 0 50%;
-	flex-wrap: wrap;
-}
-
-.App-inputs .selects .select-grid {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-wrap: wrap;
-	align-content: space-around;
-}
-
-.App-inputs .buttons {
-	padding-top: 20px;
-	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
-	justify-content: center;
-}
-
-.App-inputs .messages {
-	padding-top: 20px;
-	align-items: center;
-	justify-content: center;
-}
-
-@media (max-width: 600px) {
-	.App-inputs .buttons {
-		display: flex;
-		flex-wrap: wrap;
-	}
-}
-
 h1 {
 	text-align: center;
 	display: block;
@@ -94,40 +30,6 @@ h1 {
 	margin-inline-end: 0px;
 	font-weight: normal;
 	font-style: italic;
-}
-
-.total-notes {
-	text-align: center;
-	font-size: 0.6em;
-}
-
-.total-notes .number {
-	font-size: 1.4em;
-}
-
-.message-box {
-	text-align: center;
-}
-
-.tempo-input {
-	width: 1ch;
-	border: none !important;
-	padding: 0px;
-	margin: 0px;
-	background-color: var(--background-color);
-	color: var(--text-color);
-	font-family: "Short Stack", cursive, sans-serif;
-}
-
-.show-me-panels {
-	text-align: center;
-}
-
-.tiny-links {
-	margin-top: 10px;
-	display: flex;
-	justify-content: center;
-	align-items: baseline;
 }
 
 .debug {
@@ -144,29 +46,4 @@ h1 {
 	background-color: black;
 	padding: 20px;
 	font-size: 0.5em;
-}
-
-
-.link-looking-button {
-	border-style: none !important;
-	border: none;
-	font-size: 0.6em !important;
-	text-decoration: underline;
-	background: none;
-	padding: 0px;
-	color: var(--text-color) !important;
-}
-
-.dark-link-looking-button {
-	border-style: none !important;
-	border: none;
-	text-decoration: underline;
-	background: none;
-	padding: 0px;
-	color: var(--background-color) !important;
-}
-
-.source-code {
-	font-size: 0.6em;
-	color: var(--text-color) !important;
 }
