--- a/src/index.css
+++ b/src/index.css
@@ -2,19 +2,17 @@
 @tailwind components;
 @tailwind utilities; 
 
-@import url("https://fonts.googleapis.com/css2?family=Short+Stack&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600;700&display=swap');
 
 body {
-	margin: 0;
-	font-family: "Short Stack", cursive, sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	background-color: #141313;
-	color: #fdf7f1;
-	align-items: left;
-	justify-content: flex-start;	
-	background-size: 50px 50px;
-	background-position: 0 0, 25px 25px;
+  margin: 0;  
+  font-family: "JetBrains Mono", system-ui, monospace;  
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #141313;
+  color: #fdf7f1;	
+  background-size: 50px 50px;
+  background-position: 0 0, 25px 25px;
 }
 
 .animations-enabled {
