--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -42,7 +42,7 @@ h1 {
 	bottom: 10px;
 	right: 20px;
 	color: white;
-	display: none;
+	display: block;
 	background-color: black;
 	padding: 20px;
 	font-size: 0.5em;
